--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Dashboard</title>
+
+    <script
+    src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
+    integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
+    crossorigin="anonymous"
+  ></script>
+
+  <script
+  src="https://code.jquery.com/jquery-3.5.1.min.js"
+  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+  crossorigin="anonymous"
+></script>
+
    
 </head>
 
@@ -19,10 +32,22 @@
     </div>
 
     <div class="col-12 col-md-8">
+        <h2 class="forecast">Current Weather:</h2>
+        <div id="current-container" class="row"></div>
+        <div id="date"></div>
+        <div id="icon"></div>
+        <div id="temp"></div>
+        <div id="humidity"></div>
+        <div id="wind"></div>
+      </div>
+
+    <div class="col-12 col-md-8">
         <h2 class="forecast">5-Day Forecast:</h2>
         <div id="forecast-container" class="row"></div>
       </div>
     </main>
+
+    
 
 <script src="./assets/js/script.js"></script>
 </body>
