weather data unit conversions

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
 
     <div class="col-12 col-md-8">
         <h2 class="forecast">Current Weather:</h2>
-        <div id="current-container" class="row"></div>
-        <div id="date"></div>
+        <div id="current-city" class="row"></div>
+        <div>Date: <span id="date"></span></div>
         <div id="icon"></div>
-        <div id="temp"></div>
-        <div id="humidity"></div>
-        <div id="wind"></div>
+        <div>Temperature: <span id="temp"></span> degreees celsius</div>
+        <div>Humidity: <span id="humidity"></span></div>
+        <div>Wind Speed: <span id="wind"></span></div>
       </div>
 
     <div class="col-12 col-md-8">
