dynamically created elements for 5 day forecast

--- a/index.html
+++ b/index.html
@@ -43,7 +43,12 @@
 
     <div class="col-12 col-md-8">
         <h2 class="forecast">5-Day Forecast:</h2>
-        <div id="forecast-container" class="row"></div>
+        <div id="forecast-city" class="row"></div>
+        <div>Date: <span id="date"></span></div>
+        <div id="iconF"></div>
+        <div>Temperature: <span id="tempF"></span> degrees celsius</div>
+        <div>Humidity: <span id="humidityF"></span></div>
+        <div>Wind Speed: <span id="windF"></span></div>
       </div>
     </main>
 
