current weather updated using dynamic elements

--- a/index.html
+++ b/index.html
@@ -34,15 +34,11 @@
       </div>
 
       <div class="col-12 col-md-8">
-        <h2 class="forecast">Current Weather:</h2>
-        <div id="current-city" class="row"></div>
-        <div>Date: <span id="date"></span></div>
-        <div id="icon"></div>
-        <div>Temperature: <span id="temp"></span> degreees celsius</div>
-        <div>Humidity: <span id="humidity"></span></div>
-        <div>Wind Speed: <span id="wind"></span></div>
-      </div>
+        <h2 class="currentTitle">Current Weather:</h2> 
+        <div id="currentContainer" class="current">      
 
+        </div>
+      </div>
       <div class="col-12 col-md-8">
         <h2 class="forecastTitle">5-Day Forecast:</h2> 
         <div id="forecastContainer" class="forecast">
