--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </form>
       </div>
 
-      <div class="col-12 col-md-8">
+      <div class="col-12 col-md-8 currentbox">
         <h2 class="currentTitle">Current Weather:</h2> 
         <div id="currentContainer" class="current">      
 
