search history funcionality added

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
             <input id="city">Search for a city:</product>
             <button class="submit">Search</button>
         </form>
+        <p>Search History:</p>
+        <ul id="search-list"></ul>
       </div>
 
       <div class="col-12 col-md-8 currentbox">
